--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
       </div>
     </div>
 
-     <div class="container">
+    <div class="container">
       <div class="d-flex justify-content-start bg-primary mb-3">
         <div class="box_3">lorem1</div>
         <div class="box_3">lorem2</div>
@@ -585,7 +585,7 @@
       </div>
     </div>
 
-     <div class="container">
+    <div class="container">
       <div class="d-flex justify-content-end bg-primary mb-3">
         <div class="box_3">lorem1</div>
         <div class="box_3">lorem2</div>
@@ -593,7 +593,7 @@
       </div>
     </div>
 
-     <div class="container">
+    <div class="container">
       <div class="d-flex justify-content-center bg-primary mb-3">
         <div class="box_3">lorem1</div>
         <div class="box_3">lorem2</div>
@@ -601,7 +601,7 @@
       </div>
     </div>
 
-     <div class="container">
+    <div class="container">
       <div class="d-flex justify-content-between bg-primary mb-3">
         <div class="box_3">lorem1</div>
         <div class="box_3">lorem2</div>
@@ -609,7 +609,7 @@
       </div>
     </div>
 
-     <div class="container">
+    <div class="container">
       <div class="d-flex justify-content-around bg-primary mb-3">
         <div class="box_3">lorem1</div>
         <div class="box_3">lorem2</div>
@@ -617,13 +617,291 @@
       </div>
     </div>
 
-     <div class="container">
+    <div class="container">
       <div class="d-flex justify-content-evenly bg-primary mb-3">
         <div class="box_3">lorem1</div>
         <div class="box_3">lorem2</div>
         <div class="box_3">lorem3</div>
       </div>
     </div>
+
+    <div class="container">
+      <div class="d-flex align-items-start bg-primary mb-3 mh-100">
+        <div class="box_3">lorem1</div>
+        <div class="box_3">lorem2</div>
+        <div class="box_3">lorem3</div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="d-flex align-items-end bg-primary mb-3 mh-100">
+        <div class="box_3">lorem1</div>
+        <div class="box_3 align-self-center">lorem2</div>
+        <div class="box_3">lorem3</div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="d-flex align-items-center bg-primary mb-3 mh-100">
+        <div class="box_3">lorem1</div>
+        <div class="box_3 align-self-end">lorem2</div>
+        <div class="box_3">lorem3</div>
+      </div>
+     </div>
+
+    <div class="container">
+      <div class="d-flex align-items-baseline bg-primary mb-3 mh-100">
+        <div class="box_3">lorem1</div>
+        <div class="box_3">lorem2</div>
+        <div class="box_3">lorem3</div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="d-flex align-items-stretch bg-primary mb-3 mh-100">
+        <div class="box_3">lorem1</div>
+        <div class="box_3">lorem2</div>
+        <div class="box_3">lorem3</div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="d-flex  bg-primary mb-3 mh-100">
+        <div class="box_3 flex-fill">lorem1 ipsum dolor sit amet.</div>
+        <div class="box_3 flex-fill">lorem2</div>
+        <div class="box_3 flex-fill">lorem3</div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="d-flex bg-primary mb-3">
+        <div class="box_3 flex-grow-1">lorem1</div>
+        <div class="box_3">lorem2</div>
+        <div class="box_3">lorem3</div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="d-flex bg-primary mb-3">
+        <div class="box_3 w-100">lorem1</div>
+        <div class="box_3 flex-shrink-1">lorem ipsum dolor sit amet</div>
+        
+      </div>
+    </div>
+
+
+    <div class="container">
+      <div class="d-flex bg-primary mb-3">
+        <div class="p-2 box_3">lorem1</div>
+        <div class="p-2 box_3">lorem2</div>
+        <div class="p-2 box_3">lorem3</div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="d-flex bg-primary mb-3">
+        <div class="me-auto p-2 box_3">lorem1</div>
+        <div class="p-2 box_3">lorem2</div>
+        <div class="p-2 box_3">lorem3</div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="d-flex bg-primary mb-3">
+        <div class="p-2 box_3">lorem1</div>
+        <div class="p-2 box_3">lorem2</div>
+        <div class="ms-auto p-2 box_3">lorem3</div>
+      </div>
+    </div>
+
+
+    <div class="container">
+      <div class="d-flex bg-primary mb-3 align-content-center flex-wrap mh-300">
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="d-flex bg-primary mb-3 align-content-end flex-wrap mh-300">
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="d-flex bg-primary mb-3 align-content-between flex-wrap mh-300">
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="d-flex bg-primary mb-3 align-content-around flex-wrap mh-300">
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+        <div class="p-2 box_3 order-1">lorem1</div>
+        <div class="p-2 box_3 order-3">lorem2</div>
+        <div class="p-2 box_3 order-2">lorem3</div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="d-flex bg-primary mb-3">
+        <div class="p-2 box_3">lorem1</div>
+        <div class="p-2 box_3">lorem2</div>
+        <div class="p-2 box_3">lorem3</div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="float-start">Float start on all viewport sizes</div>
+      <div class="float-end">Float end on all viewport sizes</div>
+      <div class="float-none">Don't float on all viewport sizes</div>
+    </div>
+
+    <div class="container">
+      <h3 class="text-center">text selection</h3>
+      <p class="user-select-all">This paragraph will be entirely selected when clicked by the user.</p>
+      <p class="user-select-auto">This paragraph has default select behavior.</p>
+      <p class="user-select-none">This paragraph will not be selectable when clicked by the user.</p>
+    </div>
+
+    <div class="container">
+      <p><a href="#" class="pe-none" tabindex="-1" aria-disabled="true">This link</a> can not be clicked.</p>
+      <p><a href="#" class="pe-auto">This link</a> can be clicked (this is default behavior).</p>
+      <p class="pe-none"><a href="#" tabindex="-1" aria-disabled="true">This link</a> can not be clicked because the <code>pointer-events</code> property is inherited from its parent. However, <a href="#" class="pe-auto">this link</a> has a <code>pe-auto</code> class and can be clicked.</p>
+    </div>
+
+    <div class="container">
+      <div class="shadow-sm p-3 mb-5 bg-body rounded">While shadows on components are disabled by default in Bootstrap and can be enabled via $enable-shadows, you can also quickly add or remove a shadow with our box-shadow utility classes. Includes support for .shadow-none and three default sizes (which have associated variables to match).</div>
+    </div>
+
+    <div class="container">
+      <div class="shadow p-3 mb-5 bg-body rounded">While shadows on components are disabled by default in Bootstrap and can be enabled via $enable-shadows, you can also quickly add or remove a shadow with our box-shadow utility classes. Includes support for .shadow-none and three default sizes (which have associated variables to match).</div>
+    </div>
+
 
 
 
